# plastered

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  entrypoint.sh  lastfm_recs_to_mbid.sh  pants.toml  plastered_1_0_0_release_notes.md  pyproject.toml  requirements.txt  server_entrypoint.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: build-and-test.yml  publish.yml  release.yml
build_scripts/: code-format.sh  gh_action_decrypt_test_html.sh  local_server_wait.sh  pull_static_assets_for_local_server.sh  render-cli-docs.sh  render-config-markdown.sh  render_cli_markdown.py  render_config_markdown.py
docs/: CLI_reference.md  FAQ.md  RELEASES.md  config_reference.md  configuration_reference.md  development.md  development_guide.md  user_guide.md  wv_claude_gone_wild_notes.md
docs/contributing/: development_guide.md
examples/: config.yaml  docker-compose.yml  examples.md  minimal_config.yaml
hooks/: bandit.sh  mypy.sh  ruff-check.sh  ruff-format.sh
lastfm_recs_scraper/: cli.py  version.py
lastfm_recs_scraper/config/: config_parser.py  config_schema.py  init_conf.yaml
lastfm_recs_scraper/release_search/: release_searcher.py
lastfm_recs_scraper/run_cache/: run_cache.py
lastfm_recs_scraper/scraper/: last_scraper.py  lastfm_recs_scraper.py
lastfm_recs_scraper/stats/: stats.py
lastfm_recs_scraper/utils/: cli_utils.py  constants.py  exceptions.py  http_utils.py  lastfm_utils.py  logging_utils.py  musicbrainz_utils.py  red_utils.py
plastered/: cli.py  main.py  version.py
plastered/actions/: __init__.py  api_actions.py  common_actions.py
plastered/api/: adhoc_helpers.py  api_models.py  api_routes.py  app.py  auth_sessions.py  constants.py  fastapi_dependencies.py  lifespan_resources.py  main.py  middleware.py  server.py  webserver.py
plastered/api/response_models/: run_record.py
plastered/api/routes/: __init__.py  api_routes.py  auth_routes.py  snatch_routes.py  webserver_routes.py
plastered/api/static/css/: classless.css  (+1 more)
plastered/api/templates/: adhoc_search.html  base_template.html  config.html  index.html  index.html.template  lfm_scraper.html  login.html  manual_search.html  manual_search.html.template  run_history_page.html  scrape_form.html  search_submitted.html.j2  user_details.html
plastered/config/: app_settings.py  cli_state.py  config_parser.py  config_schema.py  field_validators.py  init_conf.yaml
plastered/db/: db_models.py  db_utils.py
plastered/models/: __init__.py  adhoc_search_models.py  field_validators.py  lfm_models.py  manual_search_models.py  musicbrainz_models.py  red_models.py  search_item.py  types.py
plastered/release_search/: release_searcher.py  search_helpers.py  search_process_overview.md
plastered/release_search/processors/: __init__.py  bases.py  chains.py  filters.py  modifiers.py
plastered/run_cache/: run_cache.py
plastered/scraper/: lfm_scraper.py
plastered/snatch/: __init__.py
plastered/stats/: stats.py
plastered/utils/: cli_utils.py  constants.py  exceptions.py  http_utils.py  httpx_utils.py  lfm_utils.py  log_utils.py  musicbrainz_utils.py  red_utils.py
plastered/utils/httpx_utils/: __init__.py  base_client.py  lfm_client.py  musicbrainz_client.py  red_client.py  red_snatch_client.py
secrets/mock_api_responses/: last_fm_album_info_api_response.json.gpg  last_fm_track_info_api_response.json.gpg  lfm_track_info_no_album_api_response.json.gpg  mb_track_search_tuss_arid.json.gpg  mb_track_search_tuss_artist_name.json.gpg  mock_red_group_response.json.gpg  musicbrainz_release_api_response.json.gpg  red_browse_api_grouped_response.json.gpg  red_browse_api_no_results_response.json.gpg  red_browse_api_response.json.gpg  red_user_response.json.gpg  red_user_torrents_response.json.gpg  red_user_torrents_seeding_response.json.gpg  red_user_torrents_snatched_response.json.gpg  red_userstats_response.json.gpg
secrets/mock_browser_html/: mock_album_recs_pg_1.html.gpg  mock_login_page.html.gpg  mock_track_recs_pg_1.html.gpg
src/python/plastered/: cli.py  version.py
src/python/tests/: conftest.py  tests_entrypoint.sh
tests/: Dockerfile  conftest.py  test-requirements.txt  test_version.py  tests.Dockerfile  tests.dockerignore  tests_entrypoint.sh
tests/actions_tests/: test_api_actions.py  test_common_actions.py
tests/api_tests/: conftest.py  test_adhoc_helpers.py  test_api_models.py  test_api_routes.py  test_auth.py  test_lifespan_resources.py  test_server.py  test_webserver.py
tests/cli_tests/: test_cli.py  test_main.py
tests/config_tests/: test_app_settings.py  test_config_parser.py  test_field_validators.py
tests/db_tests/: test_db_utils.py
tests/deploy_tests/: test_autogenerated_docs_fresh.py  test_cli_autodocs_fresh.py  test_deploy_version_ids.py
tests/models_tests/: test_adhoc_search_models.py  test_manual_search_models.py  test_musicbrainz_models.py  test_red_models.py  test_search_item.py  test_types.py
tests/release_search_tests/: conftest.py  test_release_searcher.py  test_search_helpers.py
tests/release_search_tests/processors_tests/: test_chains.py  test_filters.py  test_modifiers.py
tests/resources/mock_api_responses/: lfm_track_info_api_response.json  lfm_track_info_no_album_api_response.json  mb_track_search_tuss_arid.json  red_browse_api_grouped_response.json
tests/resources/mock_browser_html/: mock_album_recs_pg_1.html
tests/run_cache_tests/: test_run_cache.py
tests/scraper_tests/: conftest.py  test_last_scraper.py  test_lastfm_recs_scraper.py  test_lfm_recs.py  test_lfm_scraper.py
tests/stats_tests/: test_stats.py
tests/utils_tests/: conftest.py  test_cli_utils.py  test_http_utils.py  test_lastfm_utils.py  test_lfm_utils.py  test_musicbrainz_utils.py  test_red_utils.py
tests/utils_tests/httpx_utils_tests/: conftest.py  test_httpx_utils.py  test_lfm_client.py  test_mb_client.py  test_red_client.py  test_red_snatch_client.py
tests/utils_tests/mock_api_responses/: last_fm_album_info_api_response.json  musicbrainz_release_api_response.json  red_browse_api_response.json
(+68 files in other folders)
