[project]
name = "plastered"
version = "0.2.2"
requires-python = ">= 3.12"
dependencies = [
    "beautifulsoup4==4.14.2",
    "click==8.3.0",
    "diskcache==5.6.3",
    "fastapi[all]==0.119.0",
    "httpx==0.28.1",
    "jinja2-fragments==1.10.0",
    "jsonschema==4.25.1",
    "pydantic==2.12.3",
    "pydantic-settings>=2.10.1",
    "PyYAML==6.0.3",
    "questionary==2.1.1",
    "rebrowser-playwright==1.52.0",
    "rich==14.2.0",
    "sqlmodel==0.0.27",
    "tenacity==9.1.2",
    "urllib3==2.5.0",
]

[dependency-groups]
test = [
    "bandit==1.8.0",
    "coverage-badge==1.1.2",
    "fastapi[standard]",
    "ipython>=9.3.0",
    "mkdocs-click==0.8.1",
    "mypy==1.18.2",
    "jsonschema-markdown==2025.10.1",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-cov[toml]==6.1.1",
    "pytest-httpx==0.35.0",
    "pytest-xdist==3.8.0",
    "ruff==0.11.13",
    "types-pyyaml>=6.0.12.20250516",
    "jsonref==1.1.0",
]

# UV
[tool.uv]
# https://docs.astral.sh/uv/reference/settings/#package
package = false

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4


# RUFF Linter
[tool.ruff.lint]
exclude = ["tests/**/*.py"]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
extend-select = [
    # FastAPI ruff rules: https://docs.astral.sh/ruff/rules/#fastapi-fast
    "FAST",
    # Logging ruff rules: https://docs.astral.sh/ruff/rules/#flake8-logging-log
    "LOG",
    # Type-checking runtime imports and other sanity checks: https://docs.astral.sh/ruff/rules/#flake8-type-checking-tc
    "TC",
    # Don't allow raising generic `Exception`: https://docs.astral.sh/ruff/rules/raise-vanilla-class/
    "TRY002",
]
# This is to get the line length auto-formatting mostly handled https://stackoverflow.com/a/77796620
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
# https://docs.astral.sh/ruff/settings/#lint_isort_split-on-trailing-comma
split-on-trailing-comma = false

[tool.ruff.lint.pycodestyle]
# https://docs.astral.sh/ruff/rules/line-too-long/#why-is-this-bad
ignore-overlong-task-comments = true

# RUFF formatter
[tool.ruff.format]
# https://docs.astral.sh/ruff/settings/#format_skip-magic-trailing-comma
skip-magic-trailing-comma = true
# https://docs.astral.sh/ruff/settings/#format_docstring-code-format
docstring-code-format = true


# Pytest coverage configuration
# https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.run]
source = ["plastered"]
omit = [
    "plastered/utils/log_utils.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_empty = true
skip_covered = true
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",

    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
addopts = "--cov=plastered --no-cov-on-fail"
markers = [
    "releasetest: mark test as a release-only test which should be skipped on non-release builds.",
    "slow: mark test as a slow test which should be skipped by default in non-CI builds unless `--slowtests` is provided.",
    "override_global_httpx_mock: mark a test to override the configured httpx global fixture in favor of its own.",
]
filterwarnings = [
    "error:pytest.PytestWarning.*",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = [
    "tests/",
    "build_scripts/",
]

[[tool.mypy.overrides]]
module = ["diskcache.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [
    ".github",
    "docs",
    "examples",
    "tests",
    ".venv",
]
